Fixed Contact Info Header Spacing

--- a/src/index.css
+++ b/src/index.css
@@ -185,6 +185,11 @@
     color: #444;
 }
 
+.contact-info {
+    display: flex;
+    justify-content: space-evenly;
+}
+
 .degree, .gpa, .company-location {
     font-size: 1em;
 }
